--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,9 +20,9 @@ jobs:
         os: [macos-latest, ubuntu-latest, windows-latest]
     steps:
     - uses: actions/checkout@v2
+      with:
+        submodules: recursive
     
-    - uses: textbook/git-checkout-submodule-action@2.1.1
-
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
