Add platform detection to cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,14 @@ project(decklink_ndi)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+if (CMAKE_SYSTEM_NAME MATCHES Darwin)
+  set(PLATFORM Mac)
+elseif (CMAKE_SYSTEM_NAME MATCHES Linux)
+  set(PLATFORM Linux)
+elseif (CMAKE_SYSTEM_NAME MATCHES Windows)
+  set(PLATFORM Win)
+endif()
+
 include_directories(out_ptr/include)
 include_directories(decklink/${PLATFORM}/include)
 include_directories(ndi/include)
@@ -12,11 +20,11 @@ include_directories(ndi/include)
 add_executable(decklink_ndi main.cpp)
 
 if (${PLATFORM} MATCHES Mac)
-find_library(FOUNDATION Foundation)
-if (NOT FOUNDATION)
-  message(FATAL_ERROR "Foundation not found")
-endif()
-
-target_link_libraries(decklink_ndi ${FOUNDATION})
+  find_library(FOUNDATION Foundation)
+  if (NOT FOUNDATION)
+    message(FATAL_ERROR "Foundation not found")
+  endif()
+  
+  target_link_libraries(decklink_ndi ${FOUNDATION})
 endif()
 
