--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,6 @@ if (UNIX)
 
   set(THREADS_PREFER_PTHREAD_FLAG ON)
   find_package(Threads REQUIRED)
-  target_link_libraries(my_app PRIVATE Threads::Threads)
+  target_link_libraries(decklink_ndi PRIVATE Threads::Threads)
 endif()
 
