--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -38,13 +38,22 @@ jobs:
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C ${{env.BUILD_TYPE}}
 
-    - name: Show build
-      run: ls build
-
     - name: Copy executable
       run: |
         mkdir release
         cp build/decklink_ndi* release/
+
+    - name: Get executable (non-Windows)
+      if: runner.os != 'Windows'
+      run: |
+        mkdir release
+        cp build/decklink_ndi release/decklink_ndi_${{runner.os}}
+
+    - name: Get executable (Windows)
+      if: runner.os == 'Windows'
+      run: |
+        mkdir release
+        cp build/Release/decklink_ndi.exe release/decklink_ndi_${{runner.os}}.exe
 
     - name: Upload artifact
       uses: actions/upload-artifact@v2
