--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -53,7 +53,7 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-artifact@v2
       with:
-        name: release_${{ runner.os }}
+        name: decklink_ndi_${{ runner.os }}
         path: ${{github.workspace}}/release/*
 
     - name: GH Release
